# supertts

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.sh  docker-compose.yml  example_config.json  test_voices.sh
.github/workflows/: release.yml
docs/: api.md  note.txt  performance_report.md
nginx/: nginx.conf
src/: api_server.rs  engine_pool.rs  helper.rs  supertts.rs
